--- a/index.html
+++ b/index.html
@@ -25,37 +25,15 @@
     </section>
 
     <section class="conteiner" id="tarefas">
-        <!-- <ul class="lista">
-            <li class="lista__item">
-                <a href="#" class="lista__check"><i class="check__icon"></i></a>
-                <h2 class="lista__titulo">Fazer um projeto</h2>
-                <p class="lista__subtitulo">Lista de Tarefas</p>
-                <div class="lista__cards">
-                    <span class="card">Hoje, 08:00</span>
-                </div>
-                <button class="lista__button"></button>
-            </li>
-            <li class="lista__item">
-                <a href="#" class="lista__check"><i class="check__icon"></i></a>
-                <h2 class="lista__titulo">Fazer um projeto 2</h2>
-                <p class="lista__subtitulo">Rastrear Encomenda</p>
-                <div class="lista__cards">
-                    <span class="card">Hoje, 08:00</span>
-                </div>
-                <button class="lista__button"></button>
-            </li>
-        </ul> -->
+       <!-- <div class="tarefa">
+           <i class="tarefa__icon-check"></i>
+           <h2 class="tarefa__titulo">Todas Tarefas Concluidas!</h2>
+           <p class="tarefa__mensagem">Bom Trabalho</p>
+           
+       </div> -->
     </section>
 
     <div id="dialog" class="dialog"></div>
-
-    <!-- <div class="toast">
-        <div class="toast__container">
-            <i class="tost__icon tost__icon-check"></i>
-            <h3 class="tost__titulo">Tarefa Concluida</h3>
-            <button class="close"></button>
-        </div>
-    </div> -->
 
     <script src="./assets/js/index.js" type="module"></script>
 </body>
