--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <section class="conteiner">
 
-        <button class="button button-add" id="button-add">
+        <button class="button button__icon-add" id="button-add">
             Adicinar uma tarefa
         </button>
 
@@ -41,6 +41,7 @@
     </section>
 
     <div id="dialog" class="dialog"></div>
+    <div id="dialog-toast" class="dialog"></div>
 
     <script src="./assets/js/index.js" type="module"></script>
 </body>
